Modify themes to avoid poor option wrapping on netbook-sized screens.

--- a/docs/.sphinx/themes/haiku-mod/static/haiku-mod.css
+++ b/docs/.sphinx/themes/haiku-mod/static/haiku-mod.css
@@ -8,5 +8,5 @@
 */
 @import url("haiku.css");
 table.docutils td.option-group {
-    width: 150px;
+    min-width: 6em;
 }
